more playing around

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ description: >-
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: Terranetes
-email: terranetes[]r0cket[]net
+github_url: https://github.com/terranetes
 avatar: https://avatars3.githubusercontent.com/u/53825247
